[gd_scene load_steps=13 format=3 uid="uid://b2aqasaywqe40"]

[ext_resource type="Script" uid="uid://bfawpe62hbds3" path="res://Scripts/paddle_movement.gd" id="1_idj7w"]
[ext_resource type="Script" uid="uid://byjfe1mbajr8f" path="res://Scripts/Main.gd" id="1_kln2b"]
[ext_resource type="PackedScene" uid="uid://ts4hkqdp7ovg" path="res://Prefabs/Ball.tscn" id="2_kln2b"]
[ext_resource type="PackedScene" uid="uid://bm03cfos80p8w" path="res://Prefabs/wall.tscn" id="2_rgh2o"]
[ext_resource type="Texture2D" uid="uid://bxm8m5muc81ju" path="res://Art/background.png" id="4_v1gob"]
[ext_resource type="PackedScene" uid="uid://b527brjhiifok" path="res://Prefabs/hud.tscn" id="5_pbw6q"]
[ext_resource type="Texture2D" uid="uid://cjm65dgijga3y" path="res://Art/paddle.png" id="6_jw32o"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_r0du0"]
friction = 0.0
bounce = 1.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cm0pq"]
size = Vector2(48, 200)

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_cm0pq"]
friction = 0.0
bounce = 1.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r0du0"]
size = Vector2(48, 200)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_idj7w"]
size = Vector2(20, 600)

[node name="GameScene" type="Node2D"]

[node name="ColorRect" type="ColorRect" parent="." node_paths=PackedStringArray("hud")]
editor_description = "Base background in black"
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 800.0
offset_bottom = 600.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kln2b")
wall_scene = ExtResource("2_rgh2o")
ball_scene = ExtResource("2_kln2b")
hud = NodePath("../HUD")

[node name="Sprite2D" type="Sprite2D" parent="ColorRect"]
position = Vector2(395, 297)
scale = Vector2(0.86377, 0.657852)
texture = ExtResource("4_v1gob")

[node name="PaddleLeft" type="StaticBody2D" parent="ColorRect"]
position = Vector2(23, 284)
physics_material_override = SubResource("PhysicsMaterial_r0du0")
script = ExtResource("1_idj7w")

[node name="CollisionShape2D" type="CollisionShape2D" parent="ColorRect/PaddleLeft"]
position = Vector2(17, 0)
shape = SubResource("RectangleShape2D_cm0pq")

[node name="Sprite2D2" type="Sprite2D" parent="ColorRect/PaddleLeft"]
texture_filter = 1
texture_repeat = 1
position = Vector2(17, 0)
scale = Vector2(0.261628, 0.261628)
texture = ExtResource("6_jw32o")

[node name="PaddleRight" type="StaticBody2D" parent="ColorRect"]
position = Vector2(777, 284)
physics_material_override = SubResource("PhysicsMaterial_cm0pq")
script = ExtResource("1_idj7w")
player = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="ColorRect/PaddleRight"]
position = Vector2(-17, 0)
shape = SubResource("RectangleShape2D_r0du0")

[node name="Sprite2D" type="Sprite2D" parent="ColorRect/PaddleRight"]
position = Vector2(-17, 0)
scale = Vector2(0.262, 0.262)
texture = ExtResource("6_jw32o")

[node name="OutOfBoundLeft" type="Area2D" parent="ColorRect"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ColorRect/OutOfBoundLeft"]
position = Vector2(-11, 300)
shape = SubResource("RectangleShape2D_idj7w")

[node name="OutOfBoundRight" type="Area2D" parent="ColorRect"]
position = Vector2(822, -1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="ColorRect/OutOfBoundRight"]
position = Vector2(-11, 300)
shape = SubResource("RectangleShape2D_idj7w")

[node name="BallResetTimer" type="Timer" parent="ColorRect"]
wait_time = 2.0
one_shot = true

[node name="HUD" parent="." instance=ExtResource("5_pbw6q")]

[connection signal="timeout" from="ColorRect/BallResetTimer" to="ColorRect" method="_on_ball_reset_timer_timeout"]
[connection signal="start_new_game" from="HUD" to="ColorRect" method="_on_hud_start_new_game"]
